# softwaredesign-llm-application

./: .gitignore  README.md
.devcontainer/: devcontainer.json
01/: app.py  chatbot.py  chatgpt.py
02/: chatbot.py  events_2023.json
03/: chatbot.py  setup_db.py
04/: chatbot.py  conversational_agent.py  requirements.txt
04/work/: paper1.txt  paper2.txt  paper3.txt
05/: conversational_agent.py  requirements.txt
05/work/: paper1.txt  paper3.txt
06/: README.txt  lcel_example.ipynb  old_chain_example.ipynb  requirements.txt
07/: README.md  lcel_example.ipynb  requirements.txt
08/: README.md  requirements.txt  user_interview_graph.py
09/: .env.sample  README.md  requirements.txt  research_agent.py
09/prompts/: plan_system.prompt  write_user.prompt
10/: README.md  crag_agent.py  cross_encoder_reranker.py  requirements.txt
10/prompts/: query_refine_user.prompt
11/: README.md  main.py  requirements.txt
11/prompts/: multi_step_answering_system.prompt  report_writer_system.prompt  summarize_search_system.prompt  write_system.prompt
12/: .env.sample  README.md  arag_agent.py  multi_step_approach.py  requirements.txt  settings.py  single_step_approach.py  tools.py  utility.py
12/prompts/: method_classifier_system.prompt  multi_step_answering_system.prompt  non_retrieval_qa_system.prompt  report_writer_system.prompt  single_step_answering_system.prompt  sufficiency_classifier_system.prompt  summarize_search_system.prompt
14/: Makefile  README.md  agent.py  app.py  pyproject.toml
16/: .env.sample  .gitignore  README.md  pyproject.toml
16/my_agent/: agent.py
17/: .env.sample  .gitignore  README.md  langgraph.json  pyproject.toml
17/my_agent/: agent.py  task_agent.py  task_executor_agent.py  task_planner_agent.py
17/sample/: subgraph_sample.py
18/: .env.sample  .gitignore  .repomixignore  README.md  pyproject.toml
18/prompts/: code_generator.prompt  reflection.prompt  researcher.prompt
18/sd_18/: agent.py
19/: .env.template  .gitignore  README.md  langgraph.json  pyproject.toml  repomix.config.json
19/sd_19/: client.py  current_date.py  diff_utils.py  llm.py  server.py  utils.py
19/sd_19/chains/: evaluator.py  refiner.py  writer.py
19/sd_19/prompts/evaluator/: human.txt  system.txt
19/sd_19/prompts/refiner/: human.txt  system.txt
19/sd_19/prompts/writer/: human.txt  system.txt
19/sd_19/states/: schemas.py
19/sd_19/workflows/: web_explorer.py
19/src/: llm.py  main.py  utils.py
19/src/chains/: evaluator.py  refiner.py  writer.py
19/src/prompts/evaluator/: human.txt  system.txt
19/src/prompts/refiner/: human.txt  system.txt
19/src/prompts/writer/: human.txt  system.txt
19/src/states/: schemas.py
19/src/tools/: tavily.py
19/src/workflows/: web_explorer.py
20/: .env.sample  .gitignore  .repomixignore  README.md  langgraph.json  mcp_config.json  pyproject.toml  repomix.config.json
20/.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
20/src/mcp_servers/: database.py  server.py
20/src/sd_20/: __main__.py  agent.py  mcp_manager.py  state.py
20/src/sd_20/prompts/: system.txt
21/: .env.example  .repomixignore  README.md  pyproject.toml  run.py
21/src/: main.py
21/src/content_creator/: __init__.py  agent.py  app.py  langraph_workflow.py  ui_components.py
22/: README.md  pyproject.toml  run.py
22/src/receipt_processor/: __init__.py  account.py  agent.py  app.py  constants.py  models.py  storage.py  ui_components.py  vision.py
23/: .env.sample  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  test_graphs.py
23/src/sd_23/: __init__.py  main.py  supervisor_graph.py  swarm_graph.py
23/src/sd_23/agents/: __init__.py  faq_agent.py  math_agent.py  research.py  research_agent.py  task_decomposer.py  tech_agent.py  writer.py
23/src/sd_23/utils/: memory.py  search_tools.py
24/: .env.sample  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
24/src/sd_24/: main.py
24/src/sd_24/agents/: research.py  task_decomposer.py  writer.py
24/src/sd_24/display/: __init__.py  message_formatter.py  progress_tracker.py  task_display.py  terminal_ui.py
24/src/sd_24/runner/: __init__.py  agent_runner.py
24/src/sd_24/utils/: search_tools.py  todo_manager.py  todo_tools.py
24/tests/: __init__.py
25/: .env.sample  .gitignore  README.md  chatbot_module.py  chatbot_tuning.py  main.py  pyproject.toml
25/artifact/: edamame_fairy_model.json
26/: .env.sample  .gitignore  README.md  config.py  dataset_loader.py  embeddings_cache.py  evaluator.py  pyproject.toml  rag_evaluation.py  rag_module.py  rag_optimization.py
26/artifact/: rag_baseline.json  rag_optimized_20250918_2315_em080.json  rag_optimized_20250919_1845_em072.json  rag_optimized_20250920_1223_em083.json  rag_optimized_latest.json
27/: README.md  embeddings_cache.py  evaluator.py  pyproject.toml  rag_optimization_gepa.py
27/artifact/: rag_baseline.json  rag_gepa_optimized_20250920_1131_em079.json  rag_gepa_optimized_20251021_1154_em073.json  rag_gepa_optimized_20251021_1310_em073.json  rag_gepa_optimized_latest.json
28/: README.md  agent_evaluation.py  agent_module.py  agent_optimization_gepa.py  agent_tool_specs.py  config.py  dataset_loader.py  main.py  pyproject.toml
28/artifact/: agent_baseline.json  agent_gepa_optimized_20251119_0151_score100.json  agent_gepa_optimized_20251119_0538_score100.json  agent_gepa_optimized_20251121_0319_score086.json  agent_gepa_optimized_20251121_0742_score050.json  agent_gepa_optimized_20251121_0921_score056.json  agent_gepa_optimized_20251122_0913_score060.json  agent_gepa_optimized_latest.json
32/: .dockerignore  .env.sample  .mise.toml  .textlintrc.json  Dockerfile  README.md  biome.jsonc  docker-compose.yml  knip.jsonc  next.config.ts  package.json
32/agent/: agent.ts  generate-pptx-tool.ts  index.ts  system-prompt.ts
32/app/: globals.css  layout.tsx  page.tsx
33/: .env.sample  .mise.toml  README.md  package.json  server.ts
34/: .env.sample  .gitignore  .mise.toml  README.md  biome.jsonc  package.json  tsconfig.json
(+24 files in other folders)
