[project]
name = "sd-16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.7",
    "langchain-core>=0.3.19",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.50",
    "tavily-python>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "langgraph-cli==0.1.56",
]
