[project]
name = "sd-18"
version = "0.1.0"
description = "sample project for sd-18"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "langchain-anthropic>=0.3.1",
    "langchain-community>=0.3.14",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.2.62",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]
