[project]
name = "sd-20"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.45",
    "langgraph>=0.3.16",
    "mcp[cli]>=1.4.1",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.1",
]
