[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-ocr-agent"
version = "0.1.0"
description = "領収書OCRエージェント"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "langchain-core>=0.3.58",
    "langchain-anthropic>=0.3.12",
    "langgraph>=0.4.1",
    "python-dotenv>=1.1.0",
    "pillow>=11.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
]

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.3.250308",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
