[project]
name = "sd-23"
version = "0.1.0"
dependencies = [
    "langgraph",
    "langgraph-supervisor",
    "langchain-anthropic",
    "langchain-core",
    "langchain-tavily",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_tavily.*"
ignore_missing_imports = true