[project]
name = "sd-24"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langgraph-supervisor",
    "langchain-anthropic",
    "langchain-core",
    "langchain-tavily",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sd_24"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.3",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_tavily.*"
ignore_missing_imports = true
